--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,8 @@
     <ul class="todo-list">
       <li *ngFor="let todo of todos" [class.completed]="todo.complete">
         <div class="view">
-          <input class="toggle" type="checkbox" (click)="toggleTodoComplete(todo)" [checked]="todo.complete">
-          <label>{{todo.title}}</label>
-          <button class="destroy" (click)="removeTodo(todo)"></button>
+          <mat-checkbox (click)="toggleTodoComplete(todo)" [checked]="todo.complete">{{todo.title}}</mat-checkbox>
+          <span class="icon-cancel"><i class="material-icons" (click)="removeTodo(todo)">close</i></span>
         </div>
       </li>
     </ul>
