--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,16 @@
     <h1>My Todo List</h1>
     <input class="new-todo" placeholder="What needs to be done?" autofocus="" [(ngModel)]="newTodo.title" (keyup.enter)="addTodo()">
   </header>
-  <section class="main" *ngIf="todos.length > 0">
-    <mat-list *ngFor="let todo of todos" [class.completed]="todo.complete">
-      <mat-list-item>
-        <mat-checkbox (click)="toggleTodoComplete(todo)" [checked]="todo.complete">{{todo.title}}</mat-checkbox>
-        <i class="material-icons icon-cancel" (click)="removeTodo(todo)">close</i>
-      </mat-list-item>
-    </mat-list>
-  </section>
+  <div class="list-background">
+    <section class="main" *ngIf="todos.length > 0">
+      <mat-list *ngFor="let todo of todos" [class.completed]="todo.complete">
+        <mat-list-item>
+          <mat-checkbox (click)="toggleTodoComplete(todo)" [checked]="todo.complete">{{todo.title}}</mat-checkbox>
+          <i class="material-icons icon-cancel" (click)="removeTodo(todo)">close</i>
+        </mat-list-item>
+      </mat-list>
+    </section>
+  </div>
   <footer class="footer" *ngIf="todos.length > 0">
     <span class="todo-count"><strong>{{todos.length}}</strong> {{todos.length == 1 ? 'item' : 'items'}} left</span>
   </footer>
