--- a/src/app/todo-list-header/todo-list-header.component.html
+++ b/src/app/todo-list-header/todo-list-header.component.html
@@ -1,5 +1,7 @@
 <header class="header">
   <h1>{{title}}</h1>
-  <input class="new-todo" placeholder="What needs to be done?" autofocus="" [(ngModel)]="newTodo.title"
+  <mat-form-field class="example-full-width">
+  <input matInput class="new-todo" placeholder="What will you conquer today?" autofocus="" [(ngModel)]="newTodo.title"
          (keyup.enter)="addTodo()">
+  </mat-form-field>
 </header>
